[MRM-1552] Perm-Gen space exception on MAC using the wrapper add a default to  -XX:MaxPermSize=128m to wrapper.conf
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1199338 13f79535-47bb-0310-9956-ffa450edef68